--- a/client-impl/src/main/resources/application.conf
+++ b/client-impl/src/main/resources/application.conf
@@ -2,6 +2,6 @@
 # Copyright (C) 2016 Lightbend Inc. <http://www.lightbend.com>
 #
 play.crypto.secret = whatever
-play.application.loader = optrak.lagomtest.model.impl.ClientLoader
+play.application.loader = optrak.lagomtest.client.impl.ClientLoader
 akka.actor.enable-additional-serialization-bindings = on
 
