--- a/model-impl/src/main/resources/application.conf
+++ b/model-impl/src/main/resources/application.conf
@@ -3,4 +3,4 @@
 #
 play.crypto.secret = whatever
 play.application.loader = com.optrak.lagomtest.impl.LagomtestLoader
-lagom.serialization.play-json.serializer-registry = optrak.lagomtest.model.impl.ProductSerializerRegistry
+lagom.serialization.play-json.serializer-registry = optrak.lagomtest.datamodel.impl.ProductSerializerRegistry
