--- a/model-impl/src/main/resources/application.conf
+++ b/model-impl/src/main/resources/application.conf
@@ -2,5 +2,5 @@
 # Copyright (C) 2016 Lightbend Inc. <http://www.lightbend.com>
 #
 play.crypto.secret = whatever
-play.application.loader = com.optrak.lagomtest.impl.LagomtestLoader
-lagom.serialization.play-json.serializer-registry = optrak.lagomtest.datamodel.impl.ProductSerializerRegistry
+play.application.loader = optrak.lagomtest.model.impl.ModelLoader
+akka.actor.enable-additional-serialization-bindings = on
