experimnents with different delivery methods

--- a/product-impl/src/test/resources/application.conf
+++ b/product-impl/src/test/resources/application.conf
@@ -2,8 +2,12 @@ cassandra-journal {
   # Maximum number of messages that will be batched when using `persistAsync`.
   # Also used as the max batch size for deletes.
   max-message-batch-size = 1
+  pubsub-minimum-interval = 100ms
 }
 
 cassandra-query-journal {
   refresh-interval = 1s
+  eventual-consistency-delay = 0s
 }
+
+akka.actor.enable-additional-serialization-bindings = on
